# libre-ticket

./: README.md
api/: Cargo.toml
api/db/migrations/: create_tables.sql
api/src/: main.rs
