[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
